--- a/src/index.css
+++ b/src/index.css
@@ -27,4 +27,8 @@
   .timeline-button {
     @apply block rounded-md border border-transparent bg-indigo-600 text-base font-medium text-white shadow hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2;
   }
+
+  /* .infinite-carousel-slide {
+    @apply height:100px width:250px;
+  } */
 }
